--- a/main.tex
+++ b/main.tex
@@ -526,7 +526,7 @@ With these new, more general geometric expressions for gradient, curl, and diver
 
 \section{Closed and Exact Forms, and Potentials}
 
-
+\textbf{NOTE: Closed form relates to potentials with a point taken out, or a divergenceless field. So, the magnetic field. Motivate it based on that. If we have a conservative force (electric z.b.), the fact that it's conservative }
 
 
 
