--- a/main.tex
+++ b/main.tex
@@ -522,7 +522,9 @@ With these new, more general geometric expressions for gradient, curl, and diver
 
 \section{Closed and Exact Forms, and Potentials}
 
-\textbf{NOTE: Closed form relates to potentials with a point taken out, or a divergenceless field. So, the magnetic field. Motivate it based on that. If we have a conservative force (electric z.b.), the fact that it's conservative }
+\textbf{NOTE: Closed form relates to potentials with a point taken out, or a divergenceless field. So, the magnetic field. Motivate it based on that. If the boundary functional of some function is zero always, then we can say that it is a closed functional. Correspondantly, we can say that if we have a functional that is the boundary functional of some other functional, we can say that it is an exact functional. Generalization of potentials is basically saying that any functional that is closed is also exact. Potentials lie in the fact that if a form is exact, it is also closed. If the boundary functional is zero. This would probably be better to talk about in integral form. Intuitively, things make more sense in the integral, rather than in the infinitesimal. Actually, the real definition of closed functional is that the functional is closed if its zero for all closed surfaces. If the boundary function is closed, then it is the boundary functional of some potential.}
+
+\textbf{Distinction between closed and exact disappears in integral (finite) form}
 
 Within differential forms lies the generalization of the mathematical structure underlying potentials, forces, and fields. Consider a 
 
@@ -541,6 +543,8 @@ It follows from this that all exact forms are closed (since $\eth\eth\omega = 0$
 \section{Electricity and Magnetism}
 
 \textbf{In order to do this, need a hodge dual, so need perpendicular, so need a metric. Otherwise can only have curl of E equals derivative of B in t. }
+
+\textbf{Integral equations are stronger than the differential equations. You can have the differential equation satisfied, put holes in the area, then the integral equation fails. The hole stops us from being able to see the surface as a bunch of additive infinitesimal parts}
 
 - We have work, this relates to force, and the electric field (magnetic field does no work)
 
